Additional POM updates