@@ -1,24 +1,36 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>edu.iu.cishell-clients</groupId>
-	<artifactId>parent</artifactId>
+	<groupId>org.cishell</groupId>
+	<artifactId>applications</artifactId>
 	<version>1.0.0</version>
 	<packaging>pom</packaging>
 	<parent>
 		<groupId>org.cishell</groupId>
 		<artifactId>parent</artifactId>
-		<version>0.0.1</version>
+<!-- 		<version>0.0.1</version> -->
 	</parent>
 	<modules>
+		<module>org.cishell.plugins</module>
 		<module>nwb</module>
 		<module>sci2</module>
 	</modules>
-	
 	<properties>
 		<tychoVersion>0.18.1</tychoVersion>
 		<memoryOptions1>-Xms512m -Xmx1024m -XX:PermSize=256m</memoryOptions1>
-		<memoryOptions2>-XX:MaxPermSize=256m</memoryOptions2>
 	</properties>
+
+	<distributionManagement>
+		<repository>
+			<id>cishell</id>
+			<name>CIShell</name>
+			<url>http://192.168.99.100:8100/repository/cishell/</url>
+			<releases>
+				<enabled>true</enabled>
+			</releases>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+		</repository>
+	</distributionManagement>
 </project>
